[package]
name = "sled-workload-transactions"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2018"

[dependencies]
common_utils = { path = "../../common_utils" }
rand = "0.8.3"
rand_distr = "0.4.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
